# AuthService

./: .env  .env.example  .gitignore  Cargo.toml
src/: app_state.rs  main.rs
src/application/: jwt_provider.rs  mod.rs  password_hasher.rs
src/application/repositories/: mod.rs  token_repository.rs  user_repository.rs
src/application/services/: auth_service.rs  user_service.rs
src/domain/: claims.rs  mod.rs
src/domain/entities/: mod.rs  users.rs
src/domain/enums/: mod.rs  roles.rs  token_type.rs
src/domain/models/: login_data.rs  mod.rs  refresh_data.rs  registration_data.rs  session_data.rs  token_data.rs  update_data.rs  users_query_data.rs
src/infrastructure/: app_state.rs  argon2_password_hasher.rs  bcrypt_password_hasher.rs  hmac_jwt_provider.rs  mod.rs  rsa_jwt_provider.rs
src/infrastructure/data/: mod.rs  pg_user_repository.rs  postgres_repository.rs  redis_token_repository.rs
src/presentation/: controller.rs  mod.rs
src/presentation/controllers/: controller.rs
src/presentation/requests/: leave_all_request.rs  login_request.rs  logout_all_request.rs  logout_request.rs  mod.rs  refresh_request.rs  registrarion_request.rs  registration_request.rs  update_request.rs
src/presentation/responses/: login_response.rs  mod.rs  session_response.rs  user_response.rs
