[package]
name = "AuthService"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = {version = "1.45.1", features = ["full"]}
axum = "0.8.4"
jsonwebtoken = "9.3.1"
serde = "1.0.219"
chrono = "0.4.41"
bcrypt = "0.17.0"
sea-orm = { version =  "1.1.12", features = ["sqlx-postgres", "runtime-tokio-native-tls"] }
sqlx = "0.8.6"
argon2 = { version = "0.5.3", features = ["std"] }
dotenv = "0.15.0"
uuid = { version = "1.17.0", features = ["v4"] }

